--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,13 @@
         <ul id="list">
             
         </ul>
+
+
+        <!-- update -->
+        <h1>Update</h1>
+
+
+        
     </div>
     <footer>
         <h1 class="first">Contents</h1>
